- Program refactoring  - Latex: finished important states lemmas for very particular case.

--- a/ScienceWork/MatModel.tex
+++ b/ScienceWork/MatModel.tex
@@ -78,7 +78,7 @@ h(\ga{k,r},x) =
 \begin{cases}
 \ga{k,r\oplus_k 1},& \quad \text{ если } \ga{k,r}\in C_k\setminus C_k^{\mathrm{O}};\\
 \ga{k,r\oplus_k 1},& \quad \text{ если } \ga{k,r}\in C_k^{\mathrm{O}} \text{ и } x>L;\\
-\ga{k,h_1(\ga{k,r})},& \quad \text{ если } \ga{k,r}\in C_k^{\mathrm{O}} \text{ и } x\leqslant L;\\
+\ga{0,h_1(\ga{k,r})},& \quad \text{ если } \ga{k,r}\in C_k^{\mathrm{O}} \text{ и } x\leqslant L;\\
 \ga{0,h_2(r)},& \quad \text{ если } k=0 \text{ и } x\leqslant L;\\
 h_3(r),& \quad \text{ если } k=0 \text{ и } x > L.
 \end{cases}
@@ -379,7 +379,7 @@ A_i(k_i;r_i;x^i) = \{\G_i=\ga{k_i,r_i}\vk_i=x^i\}, \quad B_i(a;b) = \{\eta_i=a, 
 \times \Pr \left( A_{i+1}(k_{i+1};r_{i+1};x^{i+1}) \left|B_i(a;b) \cap \bigcap_{t=0}^{i} A_t(k_t;r_t;x^{t})\right.\right)
 \label{markovProof}
 }
-Из равенства \eqref{new:notation:eta:xi:forget} следует, что вероятность  $\Pr \left( B_i(a;b) \left|\bigcap_{t=0}^{i} A_t(k_t;r_t;x^{t})\right.\right)$ не зависит от предыстории $\bigcap_{t=0}^{i-1} A_t(k_t;r_t;x^{t})$. Далее, из соотношений \eqref{gammaFunc}, \eqref{queuesFunc} и \eqref{FourthFunc} можно заметить, что случайный элемент $\G_{i+1}$ и случайный вектор $\vk_{i+1}$ функционально выражается через $\G_i$, $\vk_i$, $\eta_i$ и $\xi_i$. Следовательно, вероятность $\Pr ( A_{i+1}(k_{i+1};r_{i+1};x^{i+1}) |B_i(a;b) \cap \bigcap_{t=0}^{i} A_t(k_t;r_t;x^{t}))$ не зависит от предыстории. Таким образом 
+Из равенства \eqref{new:notation:eta:xi:forget} следует, что вероятность  $\Pr \left( B_i(a;b) \left|\bigcap_{t=0}^{i} A_t(k_t;r_t;x^{t})\right.\right)$ не зависит от предыстории $\bigcap_{t=0}^{i-1} A_t(k_t;r_t;x^{t})$. Далее, из соотношений \eqref{gammaFunc}, \eqref{queuesFunc} и \eqref{FourthFunc} можно заметить, что случайный элемент $\G_{i+1}$ и случайный вектор $\vk_{i+1}$ функционально выражается через $\G_i$, $\vk_i$, $\eta_i$ и $\xi_i$, поэтому вероятность $\Pr ( A_{i+1}(k_{i+1};r_{i+1};x^{i+1}) |B_i(a;b) \cap \bigcap_{t=0}^{i} A_t(k_t;r_t;x^{t}))$ не зависит от предыстории. Таким образом 
 \begin{equation*}
 \Pr \left( B_i(a;b) \left|\bigcap_{t=0}^{i} A_t(k_t;r_t;x^{t})\right.\right) = \\
 \Pr \left( B_i(a;b) \left| A_i(k_i;r_i;x^{i})\right.\right)
@@ -390,7 +390,7 @@ A_i(k_i;r_i;x^i) = \{\G_i=\ga{k_i,r_i}\vk_i=x^i\}, \quad B_i(a;b) = \{\eta_i=a, 
 \Pr \left( A_{i+1}(k_{i+1};r_{i+1};x^{i+1}) \left|B_i(a;b) \cap \bigcap_{t=0}^{i} A_t(k_t;r_t;x^{t})\right.\right) = \\
 =\Pr \left( A_{i+1}(k_{i+1};r_{i+1};x^{i+1}) \left|B_i(a;b) \cap A_i(k_i;r_i;x^{i})\right.\right)
 }
-откуда заключаем верность \eqref{markovToProve}.
+откуда заключаем верность равенства \eqref{markovToProve}.
 \end{proof}
 
 Убедившись в марковости последовательности $\Mark$, приведем формулу для вычисления ее переходных вероятностей.
@@ -446,6 +446,76 @@ a_4 &= \tilde{x}_4 - x_4 +a_2.
 которое при условии, что вектор $b$ находится из \eqref{transitionB}, превращается в формулу \eqref{transitionToProve}. Что и требовалось доказать.
 \end{proof}
 
+\subsection{Классификация состояний марковской цепи $\Mark$ по арифметическим свойствам}
+Введем множество 
+\begin{equation*}
+X^{(k,r)} = \{x \in Z_+^4 \colon x_1 > 0, x_4 \geqslant \ell_{k,r,1}\},
+\end{equation*}
+где $k$ и $r$ такие, что $\ga{k,r}\in \G$. 
+
+\begin{lemma}
+Пусть $(\gamma,x)$~--- произвольное состояние цепи $\Mark$, где $\gamma\in \G$ и $x \in Z_+^4$. Тогда за конечное число переходов с ненулевой вероятностью можно перейти из состояния $(\gamma_0, x_0)$ в некое состояние $(\ga{0,r_1}, (0,0,x_{3,1},0))$, где $x_{3,1} \leqslant L$, $0\leqslant r_1 \leqslant n_0$.
+\label{lemma:1}
+\end{lemma}
+\begin{proof}
+Доказательство начнем со случая, когда состояние $\gamma_0$ соответствует некому циклу. Тогда на каждом такте с ненулевой вероятностью по потокам $\Pi_1$ и $\Pi_3$ не будет приходить ни одного требования и, одновременно с этим, из очереди $O_4$ все требования будут перенаправляться в очередь $O_2$. Тогда, в конечном итоге, обслуживающее устройство дойдет до выходного состояния этого цикла, в котором очередь $O_3$ будет содержать $x_{3,1} \leqslant L$ требований и прибор перейдет в режим продления. После нескольких тактов подобного же рода (отсутствия требований по потокам $\Pi_1$ и $\Pi_3$, а также перенаправления всех требований из очереди $O_4$ в очередь $O_2$) требования в очередях $O_1$, $O_2$, $O_4$ кончатся и система придет в состояние $(\ga{0,r_1}, (0,0,x_{3,1},0))$.
+
+В случае же, когда состояние прибора соответствует некому состоянию продления, отличие от второй части предыдущего случая состоит в том, что в очереди $O_3$ может находиться $x_{3,0} >L$ требований. Однако тогда система рано или поздно "свалится" в один из циклов и задача будет сведена к предыдущей. 
+\end{proof}
+
+\begin{lemma}
+Из любого состояния вида $(\ga{0,r_1},(0,0,x_{3,1},0))$, где $x_{3,1} \leqslant L$, $0 \leqslant r_1 \leqslant n_0$, с ненулевой вероятностью и за конечное число переходов можно попасть в любое состояние вида $(\ga{k,0},(0,0,x_{3,2},0))$, $x_{3,2} > L$.
+\label{lemma:2}
+\end{lemma}
+\begin{proof}
+Пусть $\gamma_2$~--- состояние продления, из которого обслуживающий прибор может перейти в цикл $C_k$. Тогда предполагая, что по потокам $\Pi_1$ и $\Pi_3$ требования не поступают, а также все требования очереди $O_4$ переходят в очередь $O_2$, обслуживающее устройство в конечном итоге дойдет до состояния $\gamma_2$ с пустыми очередями $O_1$, $O_2$ и $O_4$. На этом самом такте, по потоку $\Pi_3$, в дополнение к уже имеющимся $x_{3,1} \leqslant L$ требованиям, может придти любое количество требований, то есть система может попасть в любое из состояний $(\ga{k,0},(0,0,x_{3,2},0))$, $x_{3,2} > L$.
+\end{proof}
+
+\begin{lemma}
+Из любого входного состояния вида $(\ga{k,0}, (0,0,x_{3,2},0))$, $x_{3,2} > L$, с ненулевой вероятностью и за конечное число шагов можно перейти в любое состояние вида $(\ga{k,r},x_3)$, где $x_3 \in X^{(k,r)} \cap \{x_3\in Z_+^4 \colon x_{3,3} = x_{3,2} - \sum_{t=0}^{r-1}\ell_{k,t,3}\}$, $k>0$.
+\label{lemma:3}
+\end{lemma}
+\begin{proof}
+Поскольку с ненулевой вероятностью по потоку $\Pi_3$ на любом такте может приходить любое количество требований, предположим, что на такте, когда обслуживающее устройство находится в выходном состоянии $\ga{k,n_k}$, в очередь $O_3$ приходит ровно $\sum_{t=0}^{n_k} \ell_{k,t,3}$ требований. Этим обеспечивается сколь угодно долгое пребывание прибора в цикле $C_k$, при этом сохраняя количество требований в очереди $O_3$ неизменным и равным $x_{3,2}$.
+
+Далее допустим, что на первом же такте (то есть в состоянии $\ga{k,0}$) по потоку $\Pi_1$ пришло $x_{2,3}+x_{4,3} + \ell_{k,r\ominus_k 1,2} - \ell_{k,r\ominus_k 1,1}$ требований, которые спустя несколько тактов все перешли в очередь $O_4$. При этом перемещения из очереди $O_4$ в очередь $O_2$ не происходило. В состоянии $(0, 0, x_{3,2}, x_{2,3}+x_{4,3} + \ell_{k,r\ominus_k 1,2} - \ell_{k,r\ominus_k 1,1})$ очереди могут оставаться сколь угодно долгоо, вплоть до такта, в котором обслуживающее устройство  будет находиться в состоянии $\ga{k,r\ominus_k 1}$. На этом такте по потоку $\Pi_1$ придет $x_1+\ell_{k,r\ominus_k 1,1}$ требований и из очереди $O_4$ уйдет $x_2+\ell_{k,r\ominus_k 1,2}$ требований. Таким образом, на следующем такте состояние системы будет $(\ga{k,r},(x_{1,3},x_{2,3},x_{3,2}-\sum_{t=0}^{r-1}\ell_{k,t,3},x_{4,3}))$.
+\end{proof}
+
+За счет произвола в выборе $x_{3,2}$ из предыдущих лемм выводим следующую лемму.
+\begin{lemma}
+Из любого состояния вида $(\ga{0,r_1},(0,0,x_{3,1},0))$, $x_{3,1}\leqslant L$, $r_1 \leqslant n_0$, можно попасть в любое состояние вида $(\ga{k,r},x_4)$, где $x_4 \in X^{(k,r)}\cap \{x_4 \in Z_+^4 \colon x_{3,4} > L - \sum_{t=0}^{r-1} \ell_{k,t,3}\}$.
+\label{lemma:4}
+\end{lemma}
+
+Сформулируем в следующей лемме теперь множество состояний продления, в которые система способна перейти.
+\begin{lemma}
+Из любого состояния вида $(\ga{0,r_1},(0,0,x_{3,1},0))$, $x_{3,1}\leqslant L$, $r_1 \leqslant n_0$, можно попасть в любое состояние продления вида $(\ga{0,r_5},x_5)$, где $x_5 \in X^{(0,r_5)}\cap \{x_5 \in Z_+^4 \colon L \geqslant x_{3,5} > L - \max\limits_{k=1, 2, \ldots, d}\{\sum_{t=0}^{n_k} \ell_{k,t,3}\}\}$.
+\label{lemma:5}
+\end{lemma}
+\begin{proof}
+Действительно, из леммы \eqref{lemma:4} следует, что из состояния вида $(\ga{0,r_1},(0,0,x_{3,1},0))$, $x_{3,1}\leqslant L$, $r_1 \leqslant n_0$, с ненулевой вероятностью и за конечное число шагов можно перейти в выходное состояние вида $(\ga{k,n_k},x_4)$, $x_4 \in X^{(k,n_k)}\cap \{x_4 \in Z_+^4 \colon   L - \sum_{t=0}^{n_k-1} \ell_{k,t,3} < x_{3,4} \leqslant L + \ell_{k,n_k,3}\}$, причем для любого $k=1$, $2$, $\ldots$, $d$. Находясь в таком состоянии и предполагая что за текущий такт по потоку $\Pi_3$ не поступит больше $L - x_{3,4} + \ell_{k,n_k,3}$ требований, система на следующем такте перейдет в состояние продления $(\ga{0,h_1(\ga{k,n_k})}, x_6)$, где $x_6 \in X^{(0,h_1(\ga{k,n_k}))}\cap \{x_6 \in Z_+^4 \colon  L - \sum_{t=0}^{n_k} \ell_{k,t,3} < x_{3,6} \leqslant L\}$. Проведя рассуждения, аналогичные рассуждениям леммы \ref{lemma:3}, можно "опустошить" очереди $O_1$, $O_2$ и $O_4$, не допуская при этом поступления требований по потоку $\Pi_3$. Далее по схеме, описанной в лемме \ref{lemma:3}, можно привести систему в любое состояние вида $(\ga{0,r_5}, x_5)$. Этим завершается доказательство леммы.
+\end{proof}
+
+\begin{lemma}
+Ни при каких $\ga{k_0,r_0}$, $\ga{\tilde{k},\tilde{r}}$ из $\G$ и $x_0$ из $Z_+^4$ марковская цепь $\Mark$ из состояния $(\ga{k_0,r_0},x_0)$ на следующем такте не сможет перейти в состояние вида $(\ga{\tilde{k},\tilde{r}}, \widetilde{x})$, где $\widetilde{x} \notin X^{(k_0,r_0)}$.
+\end{lemma}
+\begin{proof}
+Действительно, предположим, что в начале очередного такта в очереди $O_1$ находится $\tilde{x}_1 > 0$ требований. Это значит, что за предыдущий такт смогли обслужиться все $\ell_{k_0,r_0,1}$ требований. А поскольку все требования выходного потока $\Pi_1^{\mathrm{\text{вых}}}$ без исключения становятся требованиями входного потока $\Pi_4$ и требования, пришедшие по потоку $\Pi_4$ не покидают очередь $O_4$ до начала следующего такта, то как минимум $\ell_{k_0,r_0,1}$ требований должно было остаться в очереди $O_4$ с предыдущего такта. Что и требовалось доказать.
+\end{proof}
+
+\begin{lemma}
+Из любого состояния продления вида $(\ga{0,r_1},x_1)$, $x_1 \in Z_+^4$, $x_{3,1}\leqslant L$, $r_1 \leqslant n_0$, невозможно попасть в состояние цикла вида $(\ga{k,r},x_4)$, где $x_4 \in \{x_4 \in Z_+^4 \colon x_{3,4} \leqslant L -\sum_{t=0}^{r-1} \ell_{k,t,3}\}$.
+\end{lemma}
+\begin{proof}
+Действительно, для того, чтобы попасть в состояние цикла из состояния продления, необходимо попасть сначала во входное состояние, в котором количество $x_{3,5}$ требований в очереди $O_3$ не может быть меньше $L+1$, то есть $x_{3,5} > L$. А поскольку на каждом такте, с соответствующим состоянием обслуживающего устройства $\ga{\tilde{k},\tilde{r}}$, до момента попадания обслуживающего устройства в состояние цикла $\ga{k,r}$ может обслуживаться не более $\ell_{\tilde{k},\tilde{r}, 3}$ требований, то обслужиться больше, чем $\sum_{t=0}^{r-1} \ell_{k,t,3}$ просто не могло. Поэтому в очереди останется не меньше $x_{3,5} -\sum_{t=0}^{r-1} \ell_{k,t,3}> L - \sum_{t=0}^{r-1} \ell_{k,t,3}$ требований.
+\end{proof}
+
+\begin{lemma}
+Из любого состояния цикла вида $(\ga{k,r},x_1)$, $x_1 \in Z_+^4$, невозможно попасть в состояние продления вида $(\ga{0,r_1},x_2)$, где $x_2 \in \{x_2 \in Z_+^4 \colon x_{3,2} > L \} \cup \{x_2 \in Z_+^4 \colon x_{3,2} \leqslant L -  \max\limits_{k=1, 2, \ldots, d}\{\sum_{t=0}^{n_k} \ell_{k,t,3}\} \} $.
+\end{lemma}
+\begin{proof}
+Действительно, поскольку из каждого состояния продления можно "свалиться" в цикл, то условие $x_{3,2} \leqslant L$ должно быть выполнено в каждом состоянии продления. А поскольку в циклах в очереди $O_3$ не может находиться требований меньше, чем $L -  \sum_{t=0}^{n_k} \ell_{k,t,3}$. А поскольку во время продления требования очереди $O_3$ не обслуживаются, то условие $x_{3,2} > L -  \max\limits_{k=1, 2, \ldots, d}\{\sum_{t=0}^{n_k} \ell_{k,t,3}\}$ также должно быть выполнено.
+\end{proof}
 
 
 \begin{thebibliography}{99}
