--- a/ScienceWork/MatModel.tex
+++ b/ScienceWork/MatModel.tex
@@ -183,7 +183,7 @@ T_{i+1}=h_T(\G_i,\vk_{3,i})= \Tt{k,r},\quad  \text{ где } \ga{k,r}=\G_{i+1}=h
 \end{equation*}
 где $f_j(z)$ определены в \eqref{GeneratingFunc}, $j \in \{1,3\}$. Функция $\vp_j(\nu,t)$ есть вероятность поступления $\nu=0$, $1$, $\ldots$ требований по потоку $\Pi_j$ за время $t \geqslant 0$. Положим $\vp_j(\nu,t)$ равной нулю при $\nu < 0$. Функцию $\psi(\cdot,\cdot,\cdot)$ зададим формулой
 \begin{equation*}
-\psi(k;y,u)=C_y^k u^k (1-u)^{y-k}.
+\psi(k;y,u)=C_y^k u^k (1-u)^{y-k}.	
 \end{equation*}
 По своему смыслу $\psi(k;y,u)$ есть вероятность поступления $k$ требований по потоку $\Pi_2$ при условии, что очередь $O_4$ содержит $y$ требований и обслуживающее устройство находится в состоянии $\ga{k,r}$, так что $u=p_{k,r}$. При нарушении условия $ 0\leqslant k \leqslant y$ положим $\psi(k;y,u)$ равной нулю.
 
@@ -367,7 +367,7 @@ P(\omega_0,\omega_1,\ldots,\omega_n;\{(a_1,a_2,a_3)\}) = \\
 &(1 - \delta_{\tilde{y},0}) \psi(\tilde{y}+\ell(k,r,2)-y,y_0, p_{k,r})  +\\
 &+ \delta_{\tilde{y},0}\sum_{a=0}^{\ell(k,r,2)-y} \psi(a,y_0, p_{k,r}),
 \end{aligned}\\
-\widetilde{\vp}_3(k,r,t,y,\tilde{y}) &= (1-\delta_{\tilde{y},0}) \vp_3(\tilde{y} + \ell(k,r,3)-y,t)  +\delta_{\tilde{y},0}\sum_{a=0}^{\ell(k,r,3)-x} \vp_3(a,t).
+\widetilde{\vp}_3(k,r,t,y,\tilde{y}) &= (1-\delta_{\tilde{y},0}) \vp_3(\tilde{y} + \ell(k,r,3)-y,t)  +\delta_{\tilde{y},0}\sum_{a=0}^{\ell(k,r,3)-y} \vp_3(a,t).
 %,\\
 %\widetilde{\vp}_{1}(k,r,t,x,\tilde{x},a) &=
 %\begin{aligned}[t]
